--- a/developer/overwrites.css
+++ b/developer/overwrites.css
@@ -3,11 +3,11 @@ body{
 }
 
 .item-skills {
-	background: #FE4902;
+	background: #1302fe;
 }
 
 #text-header h1 span, .box h2 {
-	color: #FE4902;
+	color: #1036a0;
 }
 
 .container {
